--- a/style.css
+++ b/style.css
@@ -70,3 +70,8 @@ body {
   justify-content: center;
   align-items: center;
 }
+
+.searchBar {
+  overflow: hidden;
+  background-color: #e9e9e9;
+}
