--- a/main.css
+++ b/main.css
@@ -38,6 +38,7 @@
 }
 
 body {
+    font-family: Arial, Helvetica, sans-serif;
     background-color: var(--background-light);
     /* Set the initial background color */
     color: var(--text-light);
@@ -53,6 +54,7 @@ body {
     }
 
     body {
+        font-family: Arial, Helvetica, sans-serif;
         /* Change to dark mode background color */
         background-color: var(--background-dark);
         /* Change to dark mode text color */
